fix misaligned submit button

--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -30,7 +30,7 @@ body {
 			letter-spacing: .01em;
 		}
 		input[type=submit] {
-			height: 39px;
+			height: 41px;
 			width: 70px;
 			border-radius: 0;
 			border: none;
